--- a/client/views/index.html
+++ b/client/views/index.html
@@ -66,6 +66,10 @@
         <div id="header">
             <div class="content-width">
               <a href="#" class="logo">VECTORA</a>
+              <ul id="login-btns">
+                <li><a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Login</a></li>
+                <li><a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> Login</a></li>
+              </ul>
             </div>
         </div>
         <div id="examples-bar">
