added vectora facebook and google apps for auth

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -67,8 +67,8 @@
             <div class="content-width">
               <a href="#" class="logo">VECTORA</a>
               <ul id="login-btns">
-                <li><a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Login</a></li>
-                <li><a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> Login</a></li>
+                <li><a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook fa-lg"></span> Login</a></li>
+                <li><a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus fa-lg"></span> Login</a></li>
               </ul>
             </div>
         </div>
