--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,9 +4,7 @@
 <head>
     <title>Vectora</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../dist/vectora.css" rel="stylesheet" />
 </head>
 
 <body ng-class="{'dragover': (dragDropState == 'dragover')}">
@@ -93,12 +91,7 @@
     </div>
     <div class="dimmer"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="../js/dependencies/angular-file-upload-all.min.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/controllers/controllers.js"></script>
+    <script src="../dist/vectora.min.js"></script>
 </body>
 
 </html>
