--- a/client/views/index.html
+++ b/client/views/index.html
@@ -89,8 +89,8 @@
             </div>
             <div class="login-buttons" ng-hide="session.isLoggedIn">
               <ul id="login-btns">
-                <li><a href="/auth/facebook" class="btn btn-primary btn-lg"><span class="fa fa-facebook fa-lg"></span> Login</a></li>
-                <li><a href="/auth/google" class="btn btn-danger btn-lg"><span class="fa fa-google-plus fa-lg"></span> Login</a></li>
+                <li><button ng-click="session.facebookLogin()" class="btn btn-primary btn-lg"><span class="fa fa-facebook fa-lg"></span> Login</button></li>
+                <li><button ng-click="session.googleLogin()" class="btn btn-danger btn-lg"><span class="fa fa-google-plus fa-lg"></span> Login</button></li>
               </ul>
             </div>
           </div>
